--- a/projeto_andrade/usuario/css/styles.css
+++ b/projeto_andrade/usuario/css/styles.css
@@ -10247,3 +10247,42 @@ body {
 .sb-sidenav-light .sb-sidenav-footer {
   background-color: #e9ecef;
 }
+.login101-form-btn {
+  font-family: Montserrat-Bold;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  background: #000000;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 25px;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+#botao_cadastro {
+  background: black;
+}
+
+#cadastro {
+  margin-top: -85px;
+  width: 100%;
+  width: 900px;
+  margin-left: 5px;
+}
+
+#botao_pedir {
+  background-color: #000;
+  border: none;
+}
